[project]
name = "kittentts"
description = "A ComfyUI extention for Kitten TTS"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["num2words", "spacy", "espeakng_loader", "misaki[en]>=0.9.4", "onnxruntime", "soundfile", "numpy", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-KittenTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "faych"
DisplayName = "ComfyUI-KittenTTS"
Icon = ""
